--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Wendsom Armand Judicaël COMPAORÉ - Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XSV8LWCSYK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XSV8LWCSYK');
+</script>
 </head>
 <body>
   <!-- À placer juste après <body> et avant <div class="background-overlay"></div> -->
