Code de vérification
A ajouter dans une balise html

--- a/index.html
+++ b/index.html
@@ -4,24 +4,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- Titre personnalisé pour l'onglet du navigateur -->
-  <title>Wendsom Armand Judicaël COMPAORÉ | Élève Ingénieur Statisticien Économiste | Portfolio</title>
+  <!-- Titre optimisé pour le SEO - Plus court et impactant -->
+  <title>Wendsom Armand Judicaël COMPAORÉ - Élève Ingénieur Statisticien Économiste</title>
   
-  <!-- Métadonnées pour le SEO et les réseaux sociaux -->
-  <meta name="description" content="Portfolio de Wendsom Armand Judicaël COMPAORÉ - Élève Ingénieur Statisticien Économiste et Spécialiste en Politique Monétaire. Découvrez mes projets en statistique, économétrie et analyse de données.">
-  <meta name="keywords" content="Wendsom Armand Judicaël COMPAORÉ, Élève Ingénieur, Statisticien, Économiste, Statistique, Économétrie, Python, R, Politique Monétaire, Portfolio">
+  <!-- Métadonnées SEO optimisées -->
+  <meta name="description" content="Wendsom Armand Judicaël COMPAORÉ - Élève Ingénieur Statisticien Économiste spécialisé en politique monétaire. Portfolio professionnel avec projets en statistique, économétrie et analyse de données.">
+  <meta name="keywords" content="Wendsom Armand Judicaël COMPAORÉ, Élève Ingénieur, Statisticien, Économiste, Politique Monétaire, Économétrie, Python, R, Portfolio">
   <meta name="author" content="Wendsom Armand Judicaël COMPAORÉ">
   
-  <!-- Open Graph pour Facebook et LinkedIn -->
-  <meta property="og:title" content="Wendsom Armand Judicaël COMPAORÉ | Élève Ingénieur Statisticien Économiste">
-  <meta property="og:description" content="Portfolio professionnel - Élève ingénieur en statistique, économétrie et politique monétaire">
+  <!-- Balise canonique pour éviter le contenu dupliqué -->
+  <link rel="canonical" href="https://wendsom.github.io/mon-portfolio/">
+  
+  <!-- Balise pour indiquer que c'est un site personnel -->
+  <!-- Code de vérification Google Search Console -->
+  <meta name="google-site-verification" content="fpqy9LtU2zAkf5ShQZmX52c3AnOYUr8HvyFMLDiUJHQ">
+  <meta name="author" content="Wendsom Armand Judicaël COMPAORÉ">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
+  
+  <!-- Balises structurées JSON-LD pour Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Wendsom Armand Judicaël COMPAORÉ",
+    "jobTitle": "Élève Ingénieur Statisticien Économiste",
+    "description": "Élève ingénieur en statistique, économétrie et politique monétaire à l'ISSP de l'Université Joseph Ki-Zerbo",
+    "url": "https://wendsom.github.io/mon-portfolio/",
+    "image": "https://wendsom.github.io/mon-portfolio/images/wendsom.jpg",
+    "sameAs": [
+      "http://www.linkedin.com/in/wendsom-armand-judicael-compaore",
+      "https://github.com/Wendsom"
+    ],
+    "alumniOf": {
+      "@type": "Organization",
+      "name": "Institut Supérieur des Sciences de la Population (ISSP)"
+    },
+    "knowsAbout": [
+      "Statistique",
+      "Économétrie", 
+      "Politique Monétaire",
+      "Python",
+      "R",
+      "Analyse de données"
+    ]
+  }
+  </script>
+  
+  <!-- Open Graph optimisé -->
+  <meta property="og:title" content="Wendsom Armand Judicaël COMPAORÉ - Élève Ingénieur Statisticien Économiste">
+  <meta property="og:description" content="Portfolio professionnel - Élève ingénieur en statistique, économétrie et politique monétaire. Découvrez mes projets et compétences.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wendsom.github.io/mon-portfolio/">
   <meta property="og:image" content="https://wendsom.github.io/mon-portfolio/images/wendsom.jpg">
+  <meta property="og:site_name" content="Portfolio Wendsom Armand Judicaël COMPAORÉ">
+  <meta property="og:locale" content="fr_FR">
   
-  <!-- Twitter Card -->
+  <!-- Twitter Card optimisé -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Wendsom Armand Judicaël COMPAORÉ | Élève Ingénieur Statisticien Économiste">
+  <meta name="twitter:title" content="Wendsom Armand Judicaël COMPAORÉ - Élève Ingénieur Statisticien Économiste">
   <meta name="twitter:description" content="Portfolio professionnel - Élève ingénieur en statistique, économétrie et politique monétaire">
   <meta name="twitter:image" content="https://wendsom.github.io/mon-portfolio/images/wendsom.jpg">
   
@@ -68,15 +109,19 @@
 </nav>
   <div class="background-overlay"></div>
 
-  <header>
+  <!-- En-tête principal avec informations personnelles -->
+  <header role="banner">
     <div class="profile-container">
-      <img src="images/wendsom.jpg" alt="Photo de profil" class="profile-pic">
+      <img src="images/wendsom.jpg" alt="Photo de profil de Wendsom Armand Judicaël COMPAORÉ" class="profile-pic">
       <div>
         <h1>Wendsom Armand Judicaël COMPAORÉ</h1>
-        <p data-fr="Étudiant en ingénierie statistique & économique" data-en="Student in Statistical & Economic Engineering">Étudiant en ingénierie statistique & économique</p>
+        <p data-fr="Élève Ingénieur Statisticien Économiste" data-en="Student in Statistical & Economic Engineering">Élève Ingénieur Statisticien Économiste</p>
       </div>
     </div>
   </header>
+
+  <!-- Contenu principal du site -->
+  <main role="main">
 
   <section id="about" class="bg-blue">
     <h2 data-fr="À propos de moi" data-en="About Me"><em data-fr="À propos de moi" data-en="About Me">À propos de moi</em></h2>
@@ -217,6 +262,10 @@
   <div class="variance-formula">
     <span>Var(X) = E[(X - μ)²] = Σ(xᵢ - μ)²P(xᵢ)</span>
   </div>
+  </main>
+
+  <!-- Pied de page -->
+  <footer role="contentinfo">
 
   <!-- Ajoute ce bouton pour changer de thème -->
 <button id="theme-toggle" aria-label="Changer le thème" style="position:fixed;top:18px;right:24px;z-index:1100;">
