--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
   gtag('js', new Date());
   gtag('config', 'G-XSV8LWCSYK');
 </script>
+  <!-- Balise de vérification Bing Webmaster Tools : permet à Bing de vérifier que tu es bien le propriétaire du site -->
+  <meta name="msvalidate.01" content="5A5B692A9B85A358354BB6D9B5FED59F" />
 </head>
 <body>
   <!-- À placer juste après <body> et avant <div class="background-overlay"></div> -->
