Résoudre les problèmes de SEO
2 Problèmes de SEO trouvés par WebMaster Tools

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Titre optimisé pour le SEO - Plus court et impactant -->
-  <title>Wendsom Armand Judicaël COMPAORÉ - Élève Ingénieur Statisticien Économiste</title>
+  <title>Wendsom Judicaël COMPAORÉ – Élève ingénieur statisticien économiste</title>
   
   <!-- Métadonnées SEO optimisées -->
-  <meta name="description" content="Wendsom Armand Judicaël COMPAORÉ - Élève Ingénieur Statisticien Économiste spécialisé en politique monétaire. Portfolio professionnel avec projets en statistique, économétrie et analyse de données.">
+  <meta name="description" content="Portfolio de Wendsom Judicaël COMPAORÉ, élève ingénieur statisticien économiste : projets, compétences et réalisations." />
   <meta name="keywords" content="Wendsom Armand Judicaël COMPAORÉ, Élève Ingénieur, Statisticien, Économiste, Politique Monétaire, Économétrie, Python, R, Portfolio">
   <meta name="author" content="Wendsom Armand Judicaël COMPAORÉ">
   
