Inclusion des balises pour indexation des pages

--- a/pages/pauvrete.html
+++ b/pages/pauvrete.html
@@ -2,7 +2,19 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title data-fr="Projet : Pauvreté" data-en="Project: Poverty">Projet : Pauvreté</title>
+  <!-- Balise de vérification Google Search Console : prouve à Google que tu es propriétaire du site -->
+  <meta name="google-site-verification" content="fpqy9LtU2zAkf5ShQZmX52c3AnOYUr8HvyFMLDiUJHQ" />
+  <!-- Balise de vérification Bing Webmaster Tools : prouve à Bing que tu es propriétaire du site -->
+  <meta name="msvalidate.01" content="5A5B692A9B85A358354BB6D9B5FED59F" />
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XSV8LWCSYK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XSV8LWCSYK');
+  </script>
+  <title data-fr="Projet : Analyse pauvreté & inégalités CI" data-en="Project: Poverty & inequality analysis CI">Analyse pauvreté & inégalités CI</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
