--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <li><a href="#engagements" data-fr="Engagements" data-en="Commitments">Engagements</a></li>
         <li><a href="#cv" data-fr="CV" data-en="CV">CV</a></li>
         <li><a href="#contact" data-fr="Contacts" data-en="Contacts">Contacts</a></li>
+        <li><a href="pages/math_eco_stat_analysis.html" data-fr="Services" data-en="Services">Services</a></li>
       </ul>
       <!-- Sélecteur de langue -->
       <div class="language-selector">
