--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
 </script>
   <!-- Balise de vérification Bing Webmaster Tools : permet à Bing de vérifier que tu es bien le propriétaire du site -->
   <meta name="msvalidate.01" content="5A5B692A9B85A358354BB6D9B5FED59F" />
+  
+  <!-- Méta-balises de sécurité -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data:; font-src 'self' https://cdnjs.cloudflare.com; connect-src 'self' https://www.google-analytics.com; form-action 'self' https://formspree.io; frame-ancestors 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta name="referrer" content="no-referrer-when-downgrade">
 </head>
 <body>
   <!-- À placer juste après <body> et avant <div class="background-overlay"></div> -->
@@ -244,19 +250,19 @@
     <!-- Liste des liens de contact sous forme de logos -->
     <div class="contact-list">
       <!-- Lien vers l'email, affiche une enveloppe rouge (Gmail) -->
-      <a href="mailto:wendjudicael@gmail.com" target="_blank" class="contact-icon contact-mail" title="Email">
+      <a href="mailto:wendjudicael@gmail.com" target="_blank" rel="noopener noreferrer" class="contact-icon contact-mail" title="Email">
         <i class="fas fa-envelope"></i>
       </a>
       <!-- Lien vers WhatsApp, affiche le logo vert WhatsApp -->
-      <a href="https://wa.me/22656109055" target="_blank" class="contact-icon contact-whatsapp" title="WhatsApp">
+      <a href="https://wa.me/22656109055" target="_blank" rel="noopener noreferrer" class="contact-icon contact-whatsapp" title="WhatsApp">
         <i class="fab fa-whatsapp"></i>
       </a>
       <!-- Lien vers LinkedIn, affiche le logo bleu LinkedIn -->
-      <a href="http://www.linkedin.com/in/wendsom-armand-judicael-compaore" target="_blank" class="contact-icon contact-linkedin" title="LinkedIn">
+      <a href="https://www.linkedin.com/in/wendsom-armand-judicael-compaore" target="_blank" rel="noopener noreferrer" class="contact-icon contact-linkedin" title="LinkedIn">
         <i class="fab fa-linkedin"></i>
       </a>
       <!-- Lien vers GitHub, affiche le logo noir GitHub -->
-      <a href="https://github.com/Wendsom" target="_blank" class="contact-icon contact-github" title="GitHub">
+      <a href="https://github.com/Wendsom" target="_blank" rel="noopener noreferrer" class="contact-icon contact-github" title="GitHub">
         <i class="fab fa-github"></i>
       </a>
     </div>
