--- a/pages/can2024.html
+++ b/pages/can2024.html
@@ -17,6 +17,10 @@
     gtag('js', new Date());
     gtag('config', 'G-XSV8LWCSYK');
   </script>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; frame-ancestors 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta name="referrer" content="no-referrer-when-downgrade">
 </head>
 <body>
   <!-- Sélecteur de langue -->
