--- a/pages/loyers_ml.html
+++ b/pages/loyers_ml.html
@@ -16,6 +16,10 @@
   </script>
   <title data-fr="Projet : ML - Coûts loyers à Melbourne" data-en="Project: ML - Rental costs in Melbourne">ML - Coûts loyers à Melbourne</title>
   <link rel="stylesheet" href="../style.css">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; frame-ancestors 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta name="referrer" content="no-referrer-when-downgrade">
 </head>
 <body>
   <!-- Sélecteur de langue -->
