--- a/pages/math_eco_stat_analysis.html
+++ b/pages/math_eco_stat_analysis.html
@@ -870,6 +870,12 @@
       }
     }
   </style>
+  
+  <!-- Méta-balises de sécurité -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data:; font-src 'self' https://cdnjs.cloudflare.com; form-action 'self' https://formspree.io; frame-ancestors 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta name="referrer" content="no-referrer-when-downgrade">
 </head>
 
 <body>
@@ -1201,7 +1207,7 @@
         <a href="https://www.linkedin.com/in/wendsom-armand-judicael-compaore" target="_blank" class="contact-icon contact-linkedin" title="LinkedIn" style="display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 50%; background: #0077b5; color: white; text-decoration: none; font-size: 1.5em; transition: all 0.3s ease;">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://github.com/Wendsom" target="_blank" class="contact-icon contact-github" title="GitHub" style="display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 50%; background: #333; color: white; text-decoration: none; font-size: 1.5em; transition: all 0.3s ease;">
+        <a href="https://github.com/Wendsom" target="_blank" rel="noopener noreferrer" class="contact-icon contact-github" title="GitHub" style="display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 50%; background: #333; color: white; text-decoration: none; font-size: 1.5em; transition: all 0.3s ease;">
           <i class="fab fa-github"></i>
         </a>
       </div>
